Client version protocol Some cmake changes #83

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,46 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
     SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 ENDIF()
 
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(GIT_CMD git)
+ELSE()
+    SET(GIT_CMD "$ENV{GIT_PATH}")
+ENDIF()
+
+EXECUTE_PROCESS(
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    COMMAND ${GIT_CMD} describe --tags --abbrev=4
+    OUTPUT_VARIABLE CLIENT_VERSION OUTPUT_STRIP_TRAILING_WHITESPACE)
+MESSAGE(STATUS ${CLIENT_VERSION})
+
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(CMAKE_CXX_FLAGS "-DDEFINED_VERSION=\"${CLIENT_VERSION}\" ${CMAKE_CXX_FLAGS}")
+ELSE()
+    SET(CMAKE_CXX_FLAGS "/DDEFINED_VERSION=\"${CLIENT_VERSION}\" ${CMAKE_CXX_FLAGS}")
+ENDIF()
+
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(GO_CMD go)
+ELSE()
+    SET(GO_CMD "$ENV{GO_PATH}")
+ENDIF()
+
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(GOFMT_CMD go)
+ELSE()
+    SET(GOFMT_CMD "$ENV{GOFMT_PATH}")
+ENDIF()
+
+MESSAGE(STATUS ${GO_CMD})
+MESSAGE(STATUS ${GOFMT_CMD})
+
+EXECUTE_PROCESS(
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/knv-server-go
+    COMMAND ${GOFMT_CMD} -w .)
+EXECUTE_PROCESS(
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/knv-server-go
+    COMMAND ${GO_CMD} build -ldflags "-X main.clientVersionBuild ${CLIENT_VERSION}")
+
 FILE(GLOB SOURCES "${SOURCE_DIR}*.cpp")
 FILE(GLOB HEADERS "${SOURCE_DIR}*.h")
 FILE(GLOB FORMS "${SOURCE_DIR}*.ui")
