gofmt bugfix in makefile Close #83

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ ELSE()
 ENDIF()
 
 IF(CMAKE_COMPILER_IS_GNUCXX)
-    SET(GOFMT_CMD go)
+    SET(GOFMT_CMD gofmt)
 ELSE()
     SET(GOFMT_CMD "$ENV{GOFMT_PATH}")
 ENDIF()
