--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,15 @@ INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${SDL_IMAGE_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${SDL_TTF_INCLUDE_DIR})
 
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    EXECUTE_PROCESS(
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+        COMMAND python metadata_generator.py)
+    EXECUTE_PROCESS(
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+        COMMAND python autogen.py)
+ENDIF()
+
 INCLUDE_DIRECTORIES("Sources")
 
 INCLUDE_DIRECTORIES($ENV{SDL_NET_INCLUDE_DIRS})
