--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ SET(CMAKE_AUTOMOC ON)
 SET(CMAKE_AUTOUIC ON)
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+SET(LAUNCHER_DIR Launcher/)
+
 SET(SOURCE_DIR Sources/)
 SET(EXEC_DIR Exec/)
 
@@ -31,7 +33,8 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
         COMMAND python2.7 autogen.py)
 ENDIF()
 
-INCLUDE_DIRECTORIES("Sources")
+INCLUDE_DIRECTORIES(SOURCE_DIR)
+INCLUDE_DIRECTORIES(LAUNCHER_DIR)
 
 INCLUDE_DIRECTORIES($ENV{SDL_NET_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES($ENV{PNG_INCLUDE_DIR})
@@ -59,6 +62,8 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
 ELSE()
     SET(CMAKE_CXX_FLAGS "/DDEFINED_VERSION=\"${CLIENT_VERSION}\" ${CMAKE_CXX_FLAGS}")
 ENDIF()
+
+#SET(CMAKE_EXE_LINKER_FLAGS "/DEBUG")
 
 IF(CMAKE_COMPILER_IS_GNUCXX)
     SET(GO_CMD go)
@@ -88,11 +93,7 @@ FILE(GLOB FORMS "${SOURCE_DIR}*.ui")
 
 QT5_WRAP_UI(FORMS_HEADERS ${FORMS})
 
-#ADD_EXECUTABLE(KVEngine ${SOURCES} ${HEADERS})
-
 ADD_EXECUTABLE(KVEngine WIN32 ${SOURCES} ${HEADERS} ${FORMS_HEADERS})
-
-#SET(CMAKE_EXE_LINKER_FLAGS "/DEBUG")
 
 qt5_use_modules(KVEngine Core)
 qt5_use_modules(KVEngine Network)
@@ -102,6 +103,21 @@ qt5_use_modules(KVEngine OpenGL)
 TARGET_LINK_LIBRARIES(KVEngine ${SDL_LIBRARY})
 TARGET_LINK_LIBRARIES(KVEngine ${SDL_IMAGE_LIBRARY})
 TARGET_LINK_LIBRARIES(KVEngine ${SDL_TTF_LIBRARY})
+
+FILE(GLOB LAUNCHER_SOURCES "${LAUNCHER_DIR}*.cpp")
+FILE(GLOB LAUNCHER_HEADERS "${LAUNCHER_DIR}*.h")
+FILE(GLOB LAUNCHER_FORMS "${LAUNCHER_DIR}*.ui")
+
+QT5_WRAP_UI(LAUNCHER_FORMS_HEADERS ${LAUNCHER_FORMS})
+
+ADD_EXECUTABLE(Launcher WIN32 ${LAUNCHER_SOURCES} ${LAUNCHER_HEADERS} ${LAUNCHER_FORMS_HEADERS})
+
+qt5_use_modules(Launcher Core)
+qt5_use_modules(Launcher Widgets)
+
+IF(WIN32)
+    TARGET_LINK_LIBRARIES(Launcher Qt5::WinMain)
+ENDIF()
 
 IF(WIN32)
     TARGET_LINK_LIBRARIES(KVEngine $ENV{SDL_NET_LIBRARIES})
@@ -123,4 +139,4 @@ ELSE()
 
 ENDIF()
 
-INSTALL(TARGETS KVEngine RUNTIME DESTINATION C:/Users/my/Documents/Qt/KVEngineQt/Exec)
+#INSTALL(TARGETS KVEngine RUNTIME DESTINATION C:/Users/my/Documents/Qt/KVEngineQt/Exec)
