--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ SET(CMAKE_AUTOUIC ON)
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 SET(LAUNCHER_DIR Launcher/)
-
 SET(SOURCE_DIR Sources/)
 SET(EXEC_DIR Exec/)
 
@@ -35,6 +34,10 @@ ENDIF()
 
 INCLUDE_DIRECTORIES(SOURCE_DIR)
 INCLUDE_DIRECTORIES(LAUNCHER_DIR)
+
+#Workaround for linux
+INCLUDE_DIRECTORIES("Sources")
+INCLUDE_DIRECTORIES("Launcher")
 
 INCLUDE_DIRECTORIES($ENV{SDL_NET_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES($ENV{PNG_INCLUDE_DIR})
