--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,12 +83,18 @@ ENDIF()
 MESSAGE(STATUS ${GOFMT_CMD})
 MESSAGE(STATUS ${GO_CMD})
 
-EXECUTE_PROCESS(
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/knv-server-go
-    COMMAND ${GOFMT_CMD} -w .)
-EXECUTE_PROCESS(
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/knv-server-go
-    COMMAND ${GO_CMD} build -ldflags "-X main.clientVersionBuild ${CLIENT_VERSION}")
+IF (WIN32)
+    EXECUTE_PROCESS(
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/knv-server-go
+        COMMAND ${GOFMT_CMD} -w .)
+    EXECUTE_PROCESS(
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/knv-server-go
+        COMMAND ${GO_CMD} build -ldflags "-X main.clientVersionBuild ${CLIENT_VERSION}")
+ELSE()
+    EXECUTE_PROCESS(
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+        COMMAND bash build_go_server.sh)
+ENDIF()
 
 FILE(GLOB SOURCES "${SOURCE_DIR}*.cpp")
 FILE(GLOB HEADERS "${SOURCE_DIR}*.h")
