--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ INCLUDE_DIRECTORIES(LAUNCHER_DIR)
 INCLUDE_DIRECTORIES("Sources")
 INCLUDE_DIRECTORIES("Launcher")
 
+INCLUDE_DIRECTORIES("Sources/Qt")
+
 INCLUDE_DIRECTORIES($ENV{SDL_NET_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES($ENV{PNG_INCLUDE_DIR})
 INCLUDE_DIRECTORIES($ENV{SFML_INCLUDE_DIR})
@@ -96,9 +98,9 @@ ELSE()
         COMMAND bash build_go_server.sh ${CLIENT_VERSION})
 ENDIF()
 
-FILE(GLOB SOURCES "${SOURCE_DIR}*.cpp")
-FILE(GLOB HEADERS "${SOURCE_DIR}*.h")
-FILE(GLOB FORMS "${SOURCE_DIR}*.ui")
+FILE(GLOB_RECURSE SOURCES "${SOURCE_DIR}*.cpp")
+FILE(GLOB_RECURSE HEADERS "${SOURCE_DIR}*.h")
+FILE(GLOB_RECURSE FORMS "${SOURCE_DIR}*.ui")
 
 QT5_WRAP_UI(FORMS_HEADERS ${FORMS})
 
@@ -113,9 +115,9 @@ TARGET_LINK_LIBRARIES(KVEngine ${SDL_LIBRARY})
 TARGET_LINK_LIBRARIES(KVEngine ${SDL_IMAGE_LIBRARY})
 TARGET_LINK_LIBRARIES(KVEngine ${SDL_TTF_LIBRARY})
 
-FILE(GLOB LAUNCHER_SOURCES "${LAUNCHER_DIR}*.cpp")
-FILE(GLOB LAUNCHER_HEADERS "${LAUNCHER_DIR}*.h")
-FILE(GLOB LAUNCHER_FORMS "${LAUNCHER_DIR}*.ui")
+FILE(GLOB_RECURSE LAUNCHER_SOURCES "${LAUNCHER_DIR}*.cpp")
+FILE(GLOB_RECURSE LAUNCHER_HEADERS "${LAUNCHER_DIR}*.h")
+FILE(GLOB_RECURSE LAUNCHER_FORMS "${LAUNCHER_DIR}*.ui")
 
 QT5_WRAP_UI(LAUNCHER_FORMS_HEADERS ${LAUNCHER_FORMS})
 
