--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,6 @@ SET(LAUNCHER_DIR Launcher/)
 SET(SOURCE_DIR Sources/)
 SET(EXEC_DIR Exec/)
 
-SET(LOKI_DIR third_party/loki-0.1.7/include/loki)
-
 FIND_PACKAGE(Qt5Network REQUIRED)
 FIND_PACKAGE(Qt5Core REQUIRED)
 FIND_PACKAGE(Qt5Widgets REQUIRED)
@@ -40,6 +38,7 @@ INCLUDE_DIRECTORIES("Sources")
 INCLUDE_DIRECTORIES("Launcher")
 
 INCLUDE_DIRECTORIES("Sources/Qt")
+INCLUDE_DIRECTORIES("Sources/Objects")
 
 INCLUDE_DIRECTORIES($ENV{SDL_NET_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES($ENV{PNG_INCLUDE_DIR})
