Metadata generation changed #112

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,15 +21,6 @@ INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${SDL_IMAGE_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${SDL_TTF_INCLUDE_DIR})
 
-IF(CMAKE_COMPILER_IS_GNUCXX)
-    EXECUTE_PROCESS(
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-        COMMAND python2.7 metadata_generator.py)
-    EXECUTE_PROCESS(
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-        COMMAND python2.7 autogen.py)
-ENDIF()
-
 INCLUDE_DIRECTORIES(SOURCE_DIR)
 INCLUDE_DIRECTORIES(LAUNCHER_DIR)
 
@@ -97,13 +88,29 @@ ELSE()
         COMMAND bash build_go_server.sh ${CLIENT_VERSION})
 ENDIF()
 
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(PYTHON_CMD python2.7)
+ELSE()
+    SET(PYTHON_CMD "$ENV{PYTHON_PATH}")
+ENDIF()
+
 FILE(GLOB_RECURSE SOURCES "${SOURCE_DIR}*.cpp")
 FILE(GLOB_RECURSE HEADERS "${SOURCE_DIR}*.h")
 FILE(GLOB_RECURSE FORMS "${SOURCE_DIR}*.ui")
 
+ADD_CUSTOM_COMMAND(
+    OUTPUT AutogenMetadata.cpp
+    COMMAND ${PYTHON_CMD} ${CMAKE_CURRENT_SOURCE_DIR}/metadata_generator.py ${CMAKE_CURRENT_SOURCE_DIR} metadata.json
+    COMMAND ${PYTHON_CMD} ${CMAKE_CURRENT_SOURCE_DIR}/autogen.py
+    DEPENDS ${HEADERS})
+
+LIST(APPEND SOURCES "${CMAKE_BINARY_DIR}/AutogenMetadata.cpp")
+
 QT5_WRAP_UI(FORMS_HEADERS ${FORMS})
 
 ADD_EXECUTABLE(KVEngine WIN32 ${SOURCES} ${HEADERS} ${FORMS_HEADERS})
+
+ADD_DEPENDENCIES(KVEngine metadata)
 
 qt5_use_modules(KVEngine Core)
 qt5_use_modules(KVEngine Network)
