--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ ELSE()
     SET(CMAKE_CXX_FLAGS "/DDEFINED_VERSION=\"${CLIENT_VERSION}\" ${CMAKE_CXX_FLAGS}")
 ENDIF()
 
-SET(CMAKE_EXE_LINKER_FLAGS "/DEBUG")
+#SET(CMAKE_EXE_LINKER_FLAGS "/DEBUG")
 
 IF(CMAKE_COMPILER_IS_GNUCXX)
     SET(GO_CMD go)
