--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ INCLUDE_DIRECTORIES("Launcher")
 
 INCLUDE_DIRECTORIES("Sources/Qt")
 INCLUDE_DIRECTORIES("Sources/Objects")
+INCLUDE_DIRECTORIES("Sources/representation")
 
 INCLUDE_DIRECTORIES($ENV{SDL_NET_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES($ENV{PNG_INCLUDE_DIR})
