Target in the CMake has been created #206

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(CMAKE_AUTOMOC ON)
 SET(CMAKE_AUTOUIC ON)
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+SET(UNPACKER_DIR QzipUnpacker/)
 SET(LAUNCHER_DIR Launcher/)
 SET(SOURCE_DIR Sources/)
 SET(EXEC_DIR Exec/)
@@ -21,10 +22,12 @@ INCLUDE_DIRECTORIES(${SDL_IMAGE_INCLUDE_DIR})
 
 INCLUDE_DIRECTORIES(SOURCE_DIR)
 INCLUDE_DIRECTORIES(LAUNCHER_DIR)
+INCLUDE_DIRECTORIES(UNPACKER_DIR)
 
 #Workaround for linux
 INCLUDE_DIRECTORIES("Sources")
 INCLUDE_DIRECTORIES("Launcher")
+INCLUDE_DIRECTORIES("QzipUnpacker")
 
 #INCLUDE_DIRECTORIES("Sources/Qt")
 #INCLUDE_DIRECTORIES("Sources/Objects")
@@ -127,6 +130,10 @@ ADD_EXECUTABLE(Launcher WIN32 ${LAUNCHER_SOURCES} ${LAUNCHER_HEADERS} ${LAUNCHER
 
 qt5_use_modules(Launcher Core)
 qt5_use_modules(Launcher Widgets)
+
+FILE(GLOB_RECURSE UNPACKER_SOURCES "${UNPACKER_DIR}*.cpp")
+ADD_EXECUTABLE(Unpacker ${UNPACKER_SOURCES})
+qt5_use_modules(Unpacker Core)
 
 IF(WIN32)
     TARGET_LINK_LIBRARIES(Launcher Qt5::WinMain)
