--- a/.gitignore
+++ b/.gitignore
@@ -139,4 +139,4 @@ Saves
 /Exec/metadata.json
 /Exec/Launcher.exe
 /Exec/Launcher
-/knv-server-go/dumps/2016-02-17_03-51-12_07-00/*.qz
+/knv-server-go/dumps
