Python script has been created #168

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,4 @@ Saves
 /knv-server-go/db-local
 /knv-server-go/server_starter.bat
 /knv-server-go/server_starter.bat - Shortcut.lnk
+/Exec/stderr.txt
