--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,36 @@ FIND_PACKAGE(Qt5Network REQUIRED)
 FIND_PACKAGE(Qt5Core REQUIRED)
 FIND_PACKAGE(Qt5Widgets REQUIRED)
 FIND_PACKAGE(Qt5OpenGL REQUIRED)
-FIND_PACKAGE(SDL REQUIRED)
-FIND_PACKAGE(SDL_image REQUIRED)
 
-INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
-INCLUDE_DIRECTORIES(${SDL_IMAGE_INCLUDE_DIR})
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(SDLDIR ON)
+ELSE()
+    IF(DEFINED ENV{SDLDIR})
+        SET(SDLDIR ON)
+    ENDIF()
+ENDIF()
+
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(SDLIMAGEDIR ON)
+ELSE()
+    IF(DEFINED ENV{SDLIMAGEDIR})
+        SET(SDLIMAGEDIR ON)
+    ENDIF()
+ENDIF()
+
+IF(SDLDIR)
+    FIND_PACKAGE(SDL)
+ENDIF()
+IF(SDLIMAGEDIR)
+    FIND_PACKAGE(SDL_image)
+ENDIF()
+
+IF(SDL_INCLUDE_DIR)
+    INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
+ENDIF()
+IF (SDL_IMAGE_INCLUDE_DIR)
+    INCLUDE_DIRECTORIES(${SDL_IMAGE_INCLUDE_DIR})
+ENDIF()
 
 INCLUDE_DIRECTORIES(SOURCE_DIR)
 INCLUDE_DIRECTORIES(LAUNCHER_DIR)
@@ -117,8 +142,12 @@ qt5_use_modules(KVEngine Network)
 qt5_use_modules(KVEngine Widgets)
 qt5_use_modules(KVEngine OpenGL)
 
-TARGET_LINK_LIBRARIES(KVEngine ${SDL_LIBRARY})
-TARGET_LINK_LIBRARIES(KVEngine ${SDL_IMAGE_LIBRARY})
+IF(${SDLDIR})
+    TARGET_LINK_LIBRARIES(KVEngine ${SDL_LIBRARY})
+ENDIF()
+IF(${SDLIMAGEDIR})
+    TARGET_LINK_LIBRARIES(KVEngine ${SDL_IMAGE_LIBRARY})
+ENDIF()
 
 FILE(GLOB_RECURSE LAUNCHER_SOURCES "${LAUNCHER_DIR}*.cpp")
 FILE(GLOB_RECURSE LAUNCHER_HEADERS "${LAUNCHER_DIR}*.h")
@@ -185,5 +214,4 @@ ADD_CUSTOM_COMMAND(
         Launcher${EXECUTABLE_SUFFIX}
         ${CMAKE_CURRENT_SOURCE_DIR}/${EXEC_DIR}/Launcher${EXECUTABLE_SUFFIX}
 )
-
 
