--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: cpp
 compiler: gcc
 install: make travis-get-deps
-script: make CXX=g++-4.9 CC=gcc-4.9
-after_script: make run-tests
+script: 
+  - make CXX=g++-4.9 CC=gcc-4.9
+  - ./Exec/KVEngine --run-tests
