--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: cpp
 compiler: gcc
 install: make travis-get-deps
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep
 script: 
   - make CXX=g++-4.9 CC=gcc-4.9
   - ./Exec/KVEngine --run-tests
