--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install: make travis-get-deps
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - sleep
+  - sleep 3
 script: 
   - make CXX=g++-4.9 CC=gcc-4.9
   - ./Exec/KVEngine --run-tests
