--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,42 +1,46 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(KVEngineQt)
 
-##########
-# GTEST
-##########
-# Props to http://crascit.com/2015/07/25/cmake-gtest/
-# Download and unpack googletest at configure time
+OPTION(BUILD_TESTS "Build tests" OFF)
 
-IF (MSVC) # VS2012 doesn't support correctly the tuples yet
-    ADD_DEFINITIONS( /D _VARIADIC_MAX=10 )
+IF (BUILD_TESTS)
+    ##########
+    # GTEST
+    ##########
+    # Props to http://crascit.com/2015/07/25/cmake-gtest/
+    # Download and unpack googletest at configure time
+
+    IF (MSVC) # VS2012 doesn't support correctly the tuples yet
+        ADD_DEFINITIONS(/D _VARIADIC_MAX=10)
+    ENDIF()
+
+    CONFIGURE_FILE(Tests/CMakeLists.txt
+                   googletest-download/CMakeLists.txt)
+    EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+      WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
+    EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} --build .
+      WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
+
+    # Prevent GoogleTest from overriding our compiler/linker options
+    # when building with Visual Studio
+    SET(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+    # Add googletest directly to our build. This adds
+    # the following targets: gtest, gtest_main, gmock
+    # and gmock_main
+    ADD_SUBDIRECTORY(${CMAKE_BINARY_DIR}/googletest-src
+                     ${CMAKE_BINARY_DIR}/googletest-build)
+
+    INCLUDE_DIRECTORIES("${gtest_SOURCE_DIR}/include"
+                        "${gmock_SOURCE_DIR}/include")
+
+    IF (MSVC)
+        ADD_DEFINITIONS(/D _BUILD_TESTS)
+    ELSEIF()
+        ADD_DEFINITIONS(-D _BUILD_TESTS)
+    ENDIF()
+    ##########
 ENDIF()
-
-CONFIGURE_FILE(Tests/CMakeLists.txt
-               googletest-download/CMakeLists.txt)
-EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
-EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} --build .
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
-
-# Prevent GoogleTest from overriding our compiler/linker options
-# when building with Visual Studio
-SET(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-
-# Add googletest directly to our build. This adds
-# the following targets: gtest, gtest_main, gmock
-# and gmock_main
-ADD_SUBDIRECTORY(${CMAKE_BINARY_DIR}/googletest-src
-                 ${CMAKE_BINARY_DIR}/googletest-build)
-
-# The gtest/gmock targets carry header search path
-# dependencies automatically when using CMake 2.8.11 or
-# later. Otherwise we have to add them here ourselves.
-#IF (CMAKE_VERSION VERSION_LESS 2.8.11)
-INCLUDE_DIRECTORIES("${gtest_SOURCE_DIR}/include"
-                    "${gmock_SOURCE_DIR}/include")
-#ENDIF()
-
-##########
 
 SET(CMAKE_AUTOMOC ON)
 SET(CMAKE_AUTOUIC ON)
@@ -157,7 +161,11 @@ ELSE()
     SET(PYTHON_CMD "$ENV{PYTHON_PATH}")
 ENDIF()
 
-FILE(GLOB_RECURSE TESTS "${TESTS_DIR}*.cpp")
+IF (BUILD_TESTS)
+    FILE(GLOB_RECURSE TESTS "${TESTS_DIR}*.cpp")
+ELSE()
+    SET(TESTS "")
+ENDIF()
 FILE(GLOB_RECURSE SOURCES "${SOURCE_DIR}*.cpp")
 FILE(GLOB_RECURSE HEADERS "${SOURCE_DIR}*.h")
 FILE(GLOB_RECURSE FORMS "${SOURCE_DIR}*.ui")
@@ -203,12 +211,14 @@ FILE(GLOB_RECURSE UNPACKER_SOURCES "${UNPACKER_DIR}*.cpp")
 ADD_EXECUTABLE(Unpacker ${UNPACKER_SOURCES})
 qt5_use_modules(Unpacker Core)
 
-IF(WIN32)
+IF (WIN32)
     TARGET_LINK_LIBRARIES(Launcher Qt5::WinMain)
 ENDIF()
 
-TARGET_LINK_LIBRARIES(KVEngine gtest)
-SET_TARGET_PROPERTIES(KVEngine PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE")
+IF (BUILD_TESTS)
+    TARGET_LINK_LIBRARIES(KVEngine gtest)
+    SET_TARGET_PROPERTIES(KVEngine PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE")
+ENDIF()
 
 IF(WIN32)
     TARGET_LINK_LIBRARIES(KVEngine $ENV{PNG_LIBRARY})
