--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ before_script:
 script: 
   - make CXX=g++-4.9 CC=gcc-4.9
   - ./Exec/KVEngine --run-tests
+after_success:
+  - cd ${TRAVIS_BUILD_DIR}
+  - lcov --directory . --capture --output-file coverage.info # capture coverage info
+  - lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info # filter out system and test code
+  - lcov --list coverage.info # debug before upload
+  - coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info # uploads to cov
