--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ script:
   - ./Exec/KVEngine --run-tests
 after_success:
   - cd ${TRAVIS_BUILD_DIR}
-  - rm -f KVEngine.dir/AutogenMetadata.cpp.gcda # workaround
-  - lcov --directory . --capture --output-file coverage.info # capture coverage info
+#  - rm -f KVEngine.dir/AutogenMetadata.cpp.gcda # workaround
+  - gcov `find . "*.gcda"`
+  - lcov -c -d . -o coverage.info
   - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system code
   - lcov --list coverage.info # debug before upload
   - coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info # uploads to cov
