--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,22 @@
 language: cpp
+sudo: required
+dist: trusty
 compiler: gcc
 before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y g++-4.9 lcov
   - export CXX="g++-4.9"
-install: 
+install:
   - make travis-get-deps
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3
-script: 
+script:
   - make CXX=g++-4.9 CC=gcc-4.9
   - ./Exec/KVEngine --run-tests
 after_success:
   - cd ${TRAVIS_BUILD_DIR}
-#  - rm -f KVEngine.dir/AutogenMetadata.cpp.gcda # workaround
-  - gcov `find . -name "*.gcda"`
   - lcov -c -d . -o coverage.info
   - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system code
   - lcov --list coverage.info # debug before upload
