--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,7 @@ after_success:
   - cd ${TRAVIS_BUILD_DIR}
   - lcov -c -d . -o coverage.info
   - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system code
+  - lcov --remove coverage.info 'Tests/*' --output-file coverage.info # remove tests from coverage
+  - lcov --remove coverage.info 'build/*' --output-file coverage.info # remove gtest and generated code from coverage
   - lcov --list coverage.info # debug before upload
   - coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info # uploads to cov
