--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,18 +113,9 @@ ENDIF()
 MESSAGE(STATUS ${GOFMT_CMD})
 MESSAGE(STATUS ${GO_CMD})
 
-IF (WIN32)
-    EXECUTE_PROCESS(
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/knv-server-go
-        COMMAND ${GOFMT_CMD} -w .)
-    EXECUTE_PROCESS(
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/knv-server-go
-        COMMAND ${GO_CMD} build -ldflags "-X main.clientVersionBuild ${CLIENT_VERSION}")
-ELSE()
-    EXECUTE_PROCESS(
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-        COMMAND bash build_go_server.sh ${CLIENT_VERSION})
-ENDIF()
+EXECUTE_PROCESS(
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/griefly-server
+    COMMAND ${GO_CMD} build -ldflags "-X main.clientVersionBuild ${CLIENT_VERSION}")
 
 IF(CMAKE_COMPILER_IS_GNUCXX)
     SET(PYTHON_CMD python2.7)
