gmock has been enabled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,6 +181,7 @@ ENDIF()
 
 IF (BUILD_TESTS)
     TARGET_LINK_LIBRARIES(KVEngine gtest)
+    TARGET_LINK_LIBRARIES(KVEngine gmock)
     SET_TARGET_PROPERTIES(KVEngine PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE")
 ENDIF()
 
