Mock for IGame #250

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,7 +124,7 @@ ELSE()
 ENDIF()
 
 IF (BUILD_TESTS)
-    FILE(GLOB_RECURSE TESTS "${TESTS_DIR}*.cpp")
+    FILE(GLOB_RECURSE TESTS "${TESTS_DIR}*.cpp" "${TESTS_DIR}*.h")
 ELSE()
     SET(TESTS "")
 ENDIF()
