--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,237 +1,401 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-PROJECT(KVEngineQt)
+cmake_minimum_required(VERSION 2.8)
+project(KVEngineQt)
 
-OPTION(BUILD_TESTS "Build tests" OFF)
-OPTION(BUILD_COVER "Generate test coverage" OFF)
+option(BUILD_TESTS "Build tests" OFF)
+option(BUILD_COVER "Generate test coverage" OFF)
 
-FIND_PACKAGE(Git REQUIRED)
-MESSAGE(STATUS ${GIT_VERSION_STRING})
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
-IF (BUILD_TESTS)
-    ##########
-    # GTEST
-    ##########
+##################################
+### Start search dependencies
+###
+
+###########################
+#
+# Git search
+#
+###########################
+find_package(Git REQUIRED)
+if(Git_FOUND)
+    message(STATUS "Git has been found, ${GIT_VERSION_STRING}")
+else()
+    message(FATAL_ERROR "Unable to find Git!")
+endif()
+
+###########################
+#
+# Qt5 search
+#
+###########################
+find_package(Qt5Core REQUIRED)
+if(Qt5Core_FOUND)
+    message(STATUS "Qt5Core has been found")
+else()
+    message(FATAL_ERROR "Unable to find Qt5Core!")
+endif()
+
+find_package(Qt5Network REQUIRED)
+if(Qt5Network_FOUND)
+    message(STATUS "Qt5Network has been found")
+else()
+    message(FATAL_ERROR "Unable to find Qt5Network!")
+endif()
+
+find_package(Qt5Widgets REQUIRED)
+if(Qt5Widgets_FOUND)
+    message(STATUS "Qt5Widgets has been found")
+else()
+    message(FATAL_ERROR "Unable to find Qt5Widgets!")
+endif()
+
+find_package(Qt5OpenGL REQUIRED)
+if(Qt5OpenGL_FOUND)
+    message(STATUS "Qt5OpenGL has been found")
+else()
+    message(FATAL_ERROR "Unable to find Qt5OpenGL!")
+endif()
+
+# Some variables neeeded by Qt
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+###########################
+#
+# Golang search
+#
+###########################
+find_package(Go REQUIRED)
+if(Go_FOUND)
+    message(STATUS "Go has been found, version: ${GO_VERSION}")
+else()
+    message(FATAL_ERROR "Unable to find Go!")
+endif()
+
+###########################
+#
+# Python 2.7 search
+#
+###########################
+find_package(PythonInterp 2.7 REQUIRED)
+if(PythonInterp_FOUND)
+    message(STATUS "Python has been found, version: ${PYTHON_VERSION_STRING}")
+else()
+    message(FATAL_ERROR "Unable to find Python!")
+endif()
+
+###########################
+#
+# SFML search (${SFML_ROOT} and $ENV{SFML_ROOT} can be setted)
+#
+###########################
+find_package(SFML 2 COMPONENTS system audio REQUIRED)
+if(SFML_FOUND)
+    message(STATUS "SFML has been found, libs: ${SFML_LIBRARIES}")
+else()
+    message(FATAL_ERROR "Unable to find SFML!")
+endif()
+
+###########################
+#
+# PNG search
+#
+###########################
+if(WIN32)
+    set(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH}
+        ${PNG_INCLUDE_DIR}
+        $ENV{PNG_INCLUDE_DIR})
+    set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH}
+        ${PNG_LIBRARY_DIR}
+        $ENV{PNG_LIBRARY_DIR})
+    set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH}
+        ${ZLIB_ROOT}
+        $ENV{ZLIB_ROOT})
+endif()
+find_package(PNG REQUIRED)
+if(SFML_FOUND)
+    message(STATUS "PNG has been found, version: ${PNG_VERSION_STRING}, include: ${PNG_INCLUDE_DIRS}, libs: ${PNG_LIBRARIES}")
+else()
+    message(FATAL_ERROR "Unable to find PNGLIB!")
+endif()
+
+######################
+#
+# GTEST "search"
+#
+######################
+if(BUILD_TESTS)
     # Props to http://crascit.com/2015/07/25/cmake-gtest/
     # Download and unpack googletest at configure time
 
-    IF (MSVC) # VS2012 doesn't support correctly the tuples yet
-        ADD_DEFINITIONS(/D _VARIADIC_MAX=10)
-    ENDIF()
+    if(MSVC) # VS2012 doesn't support correctly the tuples yet
+        add_definitions(/D _VARIADIC_MAX=10)
+    endif()
 
-    CONFIGURE_FILE(Tests/CMakeLists.txt
+    configure_file(Tests/CMakeLists.txt
                    googletest-download/CMakeLists.txt)
-    EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+    execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
       WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
-    EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} --build .
+    execute_process(COMMAND ${CMAKE_COMMAND} --build .
       WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
 
     # Prevent GoogleTest from overriding our compiler/linker options
     # when building with Visual Studio
-    SET(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
     # Add googletest directly to our build. This adds
     # the following targets: gtest, gtest_main, gmock
     # and gmock_main
-    ADD_SUBDIRECTORY(${CMAKE_BINARY_DIR}/googletest-src
-                     ${CMAKE_BINARY_DIR}/googletest-build)
+    add_subdirectory(${CMAKE_BINARY_DIR}/googletest-src
+                     ${CMAKE_BINARY_DIR}/googletest-build
+                     EXCLUDE_FROM_ALL)
 
-    INCLUDE_DIRECTORIES("${gtest_SOURCE_DIR}/include"
-                        "${gmock_SOURCE_DIR}/include")
+    if(MSVC)
+        add_definitions(/D _BUILD_TESTS)
+    else()
+        add_definitions(-D _BUILD_TESTS)
+    endif()
+endif()
 
-    IF (MSVC)
-        ADD_DEFINITIONS(/D _BUILD_TESTS)
-    ELSE()
-        ADD_DEFINITIONS(-D _BUILD_TESTS)
-    ENDIF()
-    ##########
-ENDIF()
+###
+### End search dependecies
+#######################################
 
-SET(CMAKE_AUTOMOC ON)
-SET(CMAKE_AUTOUIC ON)
-SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-SET(UNPACKER_DIR QzipUnpacker/)
-SET(LAUNCHER_DIR Launcher/)
-SET(SOURCE_DIR Sources/)
-SET(EXEC_DIR Exec/)
-SET(TESTS_DIR Tests/)
 
-FIND_PACKAGE(Qt5Network REQUIRED)
-FIND_PACKAGE(Qt5Core REQUIRED)
-FIND_PACKAGE(Qt5Widgets REQUIRED)
-FIND_PACKAGE(Qt5OpenGL REQUIRED)
+#######################################
+### Checking build version
+###
 
-INCLUDE_DIRECTORIES(SOURCE_DIR)
-INCLUDE_DIRECTORIES(LAUNCHER_DIR)
-INCLUDE_DIRECTORIES(UNPACKER_DIR)
-
-#Workaround for linux
-INCLUDE_DIRECTORIES("Sources")
-INCLUDE_DIRECTORIES("Launcher")
-INCLUDE_DIRECTORIES("QzipUnpacker")
-
-#INCLUDE_DIRECTORIES("Sources/Qt")
-#INCLUDE_DIRECTORIES("Sources/Objects")
-#INCLUDE_DIRECTORIES("Sources/representation")
-
-INCLUDE_DIRECTORIES($ENV{PNG_INCLUDE_DIR})
-INCLUDE_DIRECTORIES($ENV{SFML_INCLUDE_DIR})
-
-IF(CMAKE_COMPILER_IS_GNUCXX)
-    SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
-ENDIF()
-
-IF(CMAKE_COMPILER_IS_GNUCXX)
-    SET(GIT_CMD git)
-ELSE()
-    SET(GIT_CMD "$ENV{GIT_PATH}")
-ENDIF()
-
-EXECUTE_PROCESS(
+execute_process(
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    COMMAND ${GIT_CMD} describe --tags --abbrev=4
-    OUTPUT_VARIABLE CLIENT_VERSION OUTPUT_STRIP_TRAILING_WHITESPACE)
-MESSAGE(STATUS ${CLIENT_VERSION})
+    COMMAND ${GIT_EXECUTABLE} rev-parse --git-dir
+    OUTPUT_VARIABLE IS_GIT_REPO OUTPUT_STRIP_TRAILING_WHITESPACE)
+if(IS_GIT_REPO)
+    message(STATUS "Source dir is active git repo")
+else()
+    message(FATAL_ERROR "Source dir is not active git repo: ${CMAKE_CURRENT_SOURCE_DIR}")
+endif()
 
-IF(CMAKE_COMPILER_IS_GNUCXX)
-    SET(CMAKE_CXX_FLAGS "-DDEFINED_VERSION=\"${CLIENT_VERSION}\" ${CMAKE_CXX_FLAGS}")
-ELSE()
-    SET(CMAKE_CXX_FLAGS "/DDEFINED_VERSION=\"${CLIENT_VERSION}\" ${CMAKE_CXX_FLAGS}")
-ENDIF()
+execute_process(
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    COMMAND ${GIT_EXECUTABLE} describe --tags --abbrev=4
+    OUTPUT_VARIABLE CLIENT_VERSION OUTPUT_STRIP_TRAILING_WHITESPACE)
+if(NOT CLIENT_VERSION)
+    # No tags or shallow copy
+    set(CLIENT_VERSION "undefined")
+endif()
+message(STATUS ${CLIENT_VERSION})
+
+###
+### End checking build version
+##########################################
+
+
+
+###########################################
+### Some global compiler flags & other stuff
+###
+
+if(CMAKE_COMPILER_IS_GNUCXX)
+    set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+endif()
+
+if(CMAKE_COMPILER_IS_GNUCXX)
+    set(CMAKE_CXX_FLAGS "-DDEFINED_VERSION=\"${CLIENT_VERSION}\" ${CMAKE_CXX_FLAGS}")
+else()
+    set(CMAKE_CXX_FLAGS "/DDEFINED_VERSION=\"${CLIENT_VERSION}\" ${CMAKE_CXX_FLAGS}")
+endif()
 
 #SET(CMAKE_EXE_LINKER_FLAGS "/DEBUG")
 
-IF(CMAKE_COMPILER_IS_GNUCXX)
-    SET(GO_CMD go)
-ELSE()
-    SET(GO_CMD "$ENV{GO_PATH}")
-ENDIF()
+# Executable suffix helper
+if(WIN32)
+    set(EXECUTABLE_SUFFIX ".exe")
+else()
+    set(EXECUTABLE_SUFFIX "")
+endif()
 
-IF(CMAKE_COMPILER_IS_GNUCXX)
-    SET(GOFMT_CMD gofmt)
-ELSE()
-    SET(GOFMT_CMD "$ENV{GOFMT_PATH}")
-ENDIF()
+###
+### Global compiler glags have been setted
+##########################################
 
-MESSAGE(STATUS ${GOFMT_CMD})
-MESSAGE(STATUS ${GO_CMD})
 
-EXECUTE_PROCESS(
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/griefly-server
-    COMMAND ${GO_CMD} build -ldflags "-X main.clientVersionBuild ${CLIENT_VERSION}")
 
-IF(CMAKE_COMPILER_IS_GNUCXX)
-    SET(PYTHON_CMD python2.7)
-ELSE()
-    SET(PYTHON_CMD "$ENV{PYTHON_PATH}")
-ENDIF()
+##################################
+### Building client
+###
 
-IF (BUILD_TESTS)
-    FILE(GLOB_RECURSE TESTS "${TESTS_DIR}*.cpp" "${TESTS_DIR}*.h")
-ELSE()
-    SET(TESTS "")
-ENDIF()
-FILE(GLOB_RECURSE SOURCES "${SOURCE_DIR}*.cpp")
-FILE(GLOB_RECURSE HEADERS "${SOURCE_DIR}*.h")
-FILE(GLOB_RECURSE FORMS "${SOURCE_DIR}*.ui")
+set(SOURCE_DIR Sources/)
+set(EXEC_DIR Exec/)
+set(TESTS_DIR Tests/)
 
-IF (BUILD_COVER)
-    IF (CMAKE_COMPILER_IS_GNUCXX)
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0") # debug, no optimisation
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage") # enabling coverage
-        ADD_DEFINITIONS(-D _BUILD_COVER)
-    ELSE()
-        MESSAGE(STATUS "No tests coverage on Windows!")
-    ENDIF()
-ENDIF()
+include_directories(SOURCE_DIR)
+# Workaround for linux
+include_directories("Sources")
 
-ADD_CUSTOM_COMMAND(
-    OUTPUT AutogenMetadata.cpp
-    COMMAND ${PYTHON_CMD} ${CMAKE_CURRENT_SOURCE_DIR}/metadata_generator.py ${CMAKE_CURRENT_SOURCE_DIR} metadata.json
-    COMMAND ${PYTHON_CMD} ${CMAKE_CURRENT_SOURCE_DIR}/autogen.py
+if(BUILD_TESTS)
+    file(GLOB_RECURSE TESTS "${TESTS_DIR}*.cpp" "${TESTS_DIR}*.h")
+else()
+    set(TESTS "")
+endif()
+
+file(GLOB_RECURSE SOURCES "${SOURCE_DIR}*.cpp")
+file(GLOB_RECURSE HEADERS "${SOURCE_DIR}*.h")
+file(GLOB_RECURSE FORMS "${SOURCE_DIR}*.ui")
+
+# Metadata & source code generation
+add_custom_command(
+    OUTPUT metadata.json
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/metadata_generator.py ${CMAKE_CURRENT_SOURCE_DIR} metadata.json
     DEPENDS ${HEADERS})
+add_custom_command(
+    OUTPUT AutogenMetadata.cpp
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/autogen.py
+    DEPENDS metadata.json
+)
+add_custom_target(Metadata ALL DEPENDS AutogenMetadata.cpp)
 
-LIST(APPEND SOURCES "${CMAKE_BINARY_DIR}/AutogenMetadata.cpp")
+list(APPEND SOURCES "${CMAKE_BINARY_DIR}/AutogenMetadata.cpp")
 
-QT5_WRAP_UI(FORMS_HEADERS ${FORMS})
+qt5_wrap_ui(FORMS_HEADERS ${FORMS})
 
-ADD_EXECUTABLE(KVEngine WIN32 ${SOURCES} ${HEADERS} ${FORMS_HEADERS} ${TESTS})
+add_executable(KVEngine WIN32 ${SOURCES} ${HEADERS} ${FORMS_HEADERS} ${TESTS})
 
-ADD_DEPENDENCIES(KVEngine metadata)
+# Add PNG lib
+add_definitions(${PNG_DEFINITIONS})
+include_directories(${PNG_INCLUDE_DIRS})
+target_link_libraries(KVEngine ${PNG_LIBRARIES})
 
+# Add SFML lib
+include_directories(${SFML_INCLUDE_DIR})
+target_link_libraries(KVEngine ${SFML_LIBRARIES})
+
+# Add Qt5 lib
 qt5_use_modules(KVEngine Core)
 qt5_use_modules(KVEngine Network)
 qt5_use_modules(KVEngine Widgets)
 qt5_use_modules(KVEngine OpenGL)
 
-FILE(GLOB_RECURSE LAUNCHER_SOURCES "${LAUNCHER_DIR}*.cpp")
-FILE(GLOB_RECURSE LAUNCHER_HEADERS "${LAUNCHER_DIR}*.h")
-FILE(GLOB_RECURSE LAUNCHER_FORMS "${LAUNCHER_DIR}*.ui")
+# Add GTEST lib
+if(BUILD_TESTS)
+    include_directories("${gtest_SOURCE_DIR}/include"
+                        "${gmock_SOURCE_DIR}/include")
+    target_link_libraries(KVEngine gtest)
+    target_link_libraries(KVEngine gmock)
+    set_target_properties(KVEngine PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE")
+endif()
 
-QT5_WRAP_UI(LAUNCHER_FORMS_HEADERS ${LAUNCHER_FORMS})
+# Add opengl lib
+if(WIN32)
+    target_link_libraries(KVEngine opengl32)
+else()
+    target_link_libraries(KVEngine GL)
+endif()
 
-ADD_EXECUTABLE(Launcher WIN32 ${LAUNCHER_SOURCES} ${LAUNCHER_HEADERS} ${LAUNCHER_FORMS_HEADERS})
+# Add coverage support
+if(BUILD_COVER)
+    if(CMAKE_COMPILER_IS_GNUCXX)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0") # debug, no optimisation
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage") # enabling coverage
+        add_definitions(-D _BUILD_COVER)
+    else()
+        message(FATAL_ERROR "Tests coverage is not supported for Windows!")
+    endif()
+endif()
 
+###
+### End building client
+##################################
+
+
+
+#####################################
+### Building launcher
+###
+
+set(LAUNCHER_DIR Launcher/)
+
+include_directories(LAUNCHER_DIR)
+# Workaround for linux
+include_directories("Launcher")
+
+file(GLOB_RECURSE LAUNCHER_SOURCES "${LAUNCHER_DIR}*.cpp")
+file(GLOB_RECURSE LAUNCHER_HEADERS "${LAUNCHER_DIR}*.h")
+file(GLOB_RECURSE LAUNCHER_FORMS "${LAUNCHER_DIR}*.ui")
+
+qt5_wrap_ui(LAUNCHER_FORMS_HEADERS ${LAUNCHER_FORMS})
+
+add_executable(Launcher WIN32 ${LAUNCHER_SOURCES} ${LAUNCHER_HEADERS} ${LAUNCHER_FORMS_HEADERS})
+
+# Add Qt5 lib
 qt5_use_modules(Launcher Core)
 qt5_use_modules(Launcher Widgets)
 
-FILE(GLOB_RECURSE UNPACKER_SOURCES "${UNPACKER_DIR}*.cpp")
-ADD_EXECUTABLE(Unpacker ${UNPACKER_SOURCES})
+if(WIN32)
+    target_link_libraries(Launcher Qt5::WinMain)
+endif()
+
+###
+### End building launcher
+#####################################
+
+
+
+#####################################
+### Building qzipunpacker
+###
+
+set(UNPACKER_DIR QzipUnpacker/)
+
+include_directories(UNPACKER_DIR)
+# Workaround for linux
+include_directories("QzipUnpacker")
+
+file(GLOB_RECURSE UNPACKER_SOURCES "${UNPACKER_DIR}*.cpp")
+
+add_executable(Unpacker ${UNPACKER_SOURCES})
+
+# Add Qt5 lib
 qt5_use_modules(Unpacker Core)
 
-IF (WIN32)
-    TARGET_LINK_LIBRARIES(Launcher Qt5::WinMain)
-ENDIF()
+###
+### End building qzipunpacker
+#####################################
 
-IF (BUILD_TESTS)
-    TARGET_LINK_LIBRARIES(KVEngine gtest)
-    TARGET_LINK_LIBRARIES(KVEngine gmock)
-    SET_TARGET_PROPERTIES(KVEngine PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE")
-ENDIF()
 
-IF(WIN32)
-    TARGET_LINK_LIBRARIES(KVEngine $ENV{PNG_LIBRARY})
-    TARGET_LINK_LIBRARIES(KVEngine $ENV{SFML_LIBRARY})
-    TARGET_LINK_LIBRARIES(KVEngine $ENV{SFML_AUDIO_LIBRARY})
 
-    TARGET_LINK_LIBRARIES(KVEngine opengl32)
+#####################################
+### Building server
+###
 
-ELSE()
-    TARGET_LINK_LIBRARIES(KVEngine png)
-    TARGET_LINK_LIBRARIES(KVEngine sfml-system)
-    TARGET_LINK_LIBRARIES(KVEngine sfml-audio)
+set(SERVER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/griefly-server)
 
-    TARGET_LINK_LIBRARIES(KVEngine GL)
+file(GLOB_RECURSE GOFILES "${SERVER_DIR}/*.go")
 
-ENDIF()
+add_custom_command(
+    OUTPUT ${SERVER_DIR}/griefly-server${EXECUTABLE_SUFFIX}
+    WORKING_DIRECTORY ${SERVER_DIR}
+    COMMAND ${GO_EXECUTABLE} build -ldflags "-X main.clientVersionBuild=${CLIENT_VERSION}"
+    DEPENDS ${GOFILES})
+add_custom_target(GoServer ALL DEPENDS ${SERVER_DIR}/griefly-server${EXECUTABLE_SUFFIX})
 
-IF(WIN32)
-    SET(EXECUTABLE_SUFFIX ".exe")
-ELSE()
-    SET(EXECUTABLE_SUFFIX "")
-ENDIF()
+###
+### End building server
+#####################################
 
-ADD_CUSTOM_COMMAND(
-    TARGET KVEngine
-    COMMAND
-        ${PYTHON_CMD}
-        ${CMAKE_CURRENT_SOURCE_DIR}/copy_file.py
-        KVEngine${EXECUTABLE_SUFFIX}
-        ${CMAKE_CURRENT_SOURCE_DIR}/${EXEC_DIR}/KVEngine${EXECUTABLE_SUFFIX}
-)
-ADD_CUSTOM_COMMAND(
-    TARGET KVEngine
-    COMMAND
-        ${PYTHON_CMD}
-        ${CMAKE_CURRENT_SOURCE_DIR}/copy_file.py
-        metadata.json
-        ${CMAKE_CURRENT_SOURCE_DIR}/${EXEC_DIR}/metadata.json
-)
-ADD_CUSTOM_COMMAND(
-    TARGET Launcher
-    COMMAND
-        ${PYTHON_CMD}
-        ${CMAKE_CURRENT_SOURCE_DIR}/copy_file.py
-        Launcher${EXECUTABLE_SUFFIX}
-        ${CMAKE_CURRENT_SOURCE_DIR}/${EXEC_DIR}/Launcher${EXECUTABLE_SUFFIX}
-)
+
+
+#####################################
+### Install rules
+###
+
+install(TARGETS KVEngine Launcher
+        DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/${EXEC_DIR}/)
+
+install(FILES ${CMAKE_BINARY_DIR}/metadata.json
+        DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/${EXEC_DIR}/)
+
+###
+### Install rules
+#####################################
